--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -76,7 +76,7 @@ table.bordered tr th, table.bordered tr td {
 .frame{
     height: auto;
     width: auto;
-    max-width: 1100px;
+    max-width: 1200px;
     min-width: 600px;
     min-height: 400px; 
     /*border: 1px solid blue;*/
@@ -85,7 +85,7 @@ table.bordered tr th, table.bordered tr td {
 }
 
 .frame_head{
-    max-width: 1100px;
+    max-width: 1200px;
     margin: auto;
 }
 
@@ -93,4 +93,19 @@ table.bordered tr th, table.bordered tr td {
     display: table;
     margin: 20 auto;
     text-align: center;
+}
+
+.bgimage {
+    background-image: url('../images/Header_BG_Image.jpg');
+    background-position: center center;
+    background-size: cover;
+    height: 200px;
+    color: white;
+    text-align: center;
+}
+
+.bgcover {
+    background: rgba(20, 20, 20, 0.8);
+    height: 100%;
+    width: auto;
 }
