--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -38,16 +38,21 @@ a {
 }
 
 #header { 
-    height: 60px; 
+    height: 40px; 
     text-align: left; 
-    background: #003366; 
+    background: #1c1c1c; 
     color: #D4E6F4; 
     min-width: 600px;
 }
 
-#header h1 { 
-    padding: 1em; 
+#header h1 {  
+    padding-top: 0.2em;
+    padding-left: 0.4em;
+    font-size: 2em;
     margin: 0;
+    height: 40px;
+    color: #2f2f2f;
+    font-weight: bold;
 }
 
 /* Note: IE 5 & 6 begrijpen geen min-height */
@@ -61,7 +66,7 @@ a {
 }
 
 #footer { 
-    height: 2em; 
+    height: 1.5em; 
     padding: 1em; 
     text-align: center; 
     background: #E0E0E0 ; 
@@ -108,4 +113,22 @@ table.bordered tr th, table.bordered tr td {
     background: rgba(20, 20, 20, 0.8);
     height: 100%;
     width: auto;
+}
+
+.jq_slider{
+    height: 30px;
+    background: #9a9284;
+    text-align: center;
+    padding-top: 0.5em;
+    font: 13px/15px Verdana,Arial,Helvetica,sans-serif; 
+}
+
+.section1 {
+    min-height: 400px;
+    background: white;
+}
+
+.section2 {
+    min-height: 400px;
+    background: gray;
 }
