--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -9,6 +9,7 @@
 html { 
     height: 100%;
     width: 100%; 
+    
 }
 
 body { 
@@ -18,6 +19,7 @@ body {
     border: 0; 
     background: #FFFFFF;
     font: 13px/15px Verdana,Arial,Helvetica,sans-serif; 
+    background-color: black;
 }
 
 img { 
@@ -66,8 +68,8 @@ a {
 }
 
 #footer { 
-    height: 1.5em; 
-    padding: 1em; 
+    height: 40px; 
+    padding-top: 0.9em; 
     text-align: center; 
     background: #E0E0E0 ; 
     color: darkgray; 
@@ -109,6 +111,7 @@ table.bordered tr th, table.bordered tr td {
     text-align: center;
 }
 
+
 .bgcover {
     background: rgba(20, 20, 20, 0.8);
     height: 100%;
@@ -117,18 +120,32 @@ table.bordered tr th, table.bordered tr td {
 
 .jq_slider{
     height: 30px;
-    background: #9a9284;
+    background: #024a4d;
     text-align: center;
     padding-top: 0.5em;
     font: 13px/15px Verdana,Arial,Helvetica,sans-serif; 
+    color: white;
 }
+
 
 .section1 {
     min-height: 400px;
-    background: white;
+    background: #242329;
+    text-align: center;
+    color: white;
 }
 
 .section2 {
     min-height: 400px;
-    background: gray;
+    background: #18171b;
+    text-align: center;
+    color: white;
+}
+
+.section1 h1, .section2 h1 {
+    margin: 0px;
+    padding-top: 20px;
+    color: #f0f0f0;
+    font-size: 2em;
+    font-weight: bold;
 }
