--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -15,6 +15,7 @@ html {
 body { 
     height: 100%;
     width: 100%; 
+    min-width: 400px;
     margin: 0; padding: 0; 
     border: 0; 
     background: #FFFFFF;
@@ -45,6 +46,9 @@ a {
     background: #1c1c1c; 
     color: #D4E6F4; 
     min-width: 600px;
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-bottom-color: #4f4f4f;
 }
 
 #header h1 {  
@@ -71,7 +75,7 @@ a {
     height: 40px; 
     padding-top: 0.9em; 
     text-align: center; 
-    background: #E0E0E0 ; 
+    background: #323233 ; 
     color: darkgray; 
 }
 
@@ -84,8 +88,10 @@ table.bordered tr th, table.bordered tr td {
     height: auto;
     width: auto;
     max-width: 1200px;
+    /*
     min-width: 600px;
-    min-height: 400px; 
+    min-height: 400px;
+    */
     /*border: 1px solid blue;*/
     margin: auto;
     
@@ -125,6 +131,9 @@ table.bordered tr th, table.bordered tr td {
     padding-top: 0.5em;
     font: 13px/15px Verdana,Arial,Helvetica,sans-serif; 
     color: white;
+    border-top-style: solid;
+    border-top-width: 2px;
+    border-top-color: #4f4f4f;
 }
 
 
@@ -147,5 +156,18 @@ table.bordered tr th, table.bordered tr td {
     padding-top: 20px;
     color: #f0f0f0;
     font-size: 2em;
+    font-weight: bold;
+}
+
+.section1 p, .section2 p {
+    margin: 0px;
+
+    color: #E0E0E0;
+}
+
+.row p{
+     margin-top: 40px;
+    margin-bottom: 30px;
+    color: #524c64;
     font-weight: bold;
 }
