--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -20,7 +20,7 @@ body {
     border: 0; 
     background: #FFFFFF;
     font: 13px/15px Verdana,Arial,Helvetica,sans-serif; 
-    background-color: black;
+    background-color: white;
 }
 
 img { 
@@ -81,6 +81,7 @@ a {
 
 table.bordered tr th, table.bordered tr td { 
     border: 1px solid #000000; 
+    padding: 10px;
 }
 
 
@@ -149,6 +150,13 @@ table.bordered tr th, table.bordered tr td {
     background: #18171b;
     text-align: center;
     color: white;
+}
+
+.section3 {
+    min-height: 300px;
+    background: white;
+    text-align: center;
+    color: black;
 }
 
 .section1 h1, .section2 h1 {
